service.yml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service-svc-33
  namespace: lab-cph
spec:
  ports:
    - port: 3001
  selector:
    app: shipping-service-33
  type: NodePort
